k8s/overlays/hmg/keycloak/patch.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
        - name: keycloak
          args:
            - start
            - --http-port=8080
            - --proxy-headers=xforwarded
